src/components/Search/Search.module.css
.Search {
  margin: 16px auto;
  width: 40%;
  height: 32px;
  display: flex;
}

.Search input {
  border: 1px solid #26323880;
  border-left: none;
  font-family: inherit;
  flex: 1;
  margin-right: 8px;
  border-top-right-radius: 16px;
  border-bottom-right-radius: 16px;
  transition: 0.2s ease;
}

.Search input:focus {
  outline: none;
  border-color: #263238;
  color: white;
  background-color: #263238;
  padding: 8px;
}

.Search button {
  font-family: 'Delius Swash Caps';
  color: #263238;
  border: 1px solid #263238;
  background-color: white;
  outline: none;
  transition: 0.2s ease;
  cursor: pointer;
  border-right: none;
  border-top-left-radius: 16px;
  border-bottom-left-radius: 16px;
}

.Search button:hover {
  background-color: #263238;
  color: white;
}

